recipe-app/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-app
spec:
  selector:
    matchLabels:
      app: recipe-app
  template:
    metadata:
      labels:
        app: recipe-app
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: recipe-app
  name: recipe-app
spec:
  selector:
    app: recipe-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
