recipe-app/ingress-controller.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: my-static-ip
#     cert-manager.io/issuer: letsencrypt-production
# spec:
#   tls:
#     - secretName: web-ssl
#       hosts:
#         - recipes.tscrond.com
  defaultBackend:
    service:
      name: recipe-app
      port:
        number: 80
  rules:
  - host: "recipes.tscrond.com"
    http:
      paths:
      - path: "/*"
        pathType: ImplementationSpecific
        backend:
          service:
            name: recipe-app
            port:
              number: 80
